added annotations to the dataframe review

--- a/DataFrameReview.ipynb
+++ b/DataFrameReview.ipynb
@@ -4,12 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Dictionary for storing mixed-type data"
+    "## Python Dictionary for storing mixed-type data\n",
+    "\n",
+    "What we call \"tabular data\" are also just commonly called spreadsheets, or in database terms they would be called tables. Ideally, each column contains a single type of data.\n",
+    "\n",
+    "Using the built-in Python data structures:\n",
+    "- A **List** holds a sequence of objects. Members are accessed by an integer index (starting with 0)\n",
+    "- A **Dictionary** holds \"key:value pairs\". Members are accessed by the \"key\" name, which is handy so that we don't make as many mistakes accessing the desired object.\n",
+    "\n",
+    "Dictionaries of lists might be a natural way of storing tablular data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Accessing the equivalent of a column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +45,49 @@
        "[100, 200, 300, 400, 500]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_dict['hundreds']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can even do math on lists of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1500"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(data_dict['hundreds'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### But math between multiple columns doesn't work like we'd expect\n",
+    "\n",
+    "Adding two lists in Python just concatenates them"
    ]
   },
   {
@@ -47,30 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "1500"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(data_dict['hundreds'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "[100, 200, 300, 400, 500, 10.0, 20.0, 30.0, 40.0, 50.0]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +114,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DataFrame is convenient storage for tablular data"
+    "## DataFrame is convenient storage for tablular data\n",
+    "\n",
+    "Using the Pandas module, we can easily make a DataFrame out of our data dictionary of lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,6 +220,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Each column has a data \"type\"\n",
+    "\n",
+    "- **object** is how Pandas refers to strings of text\n",
+    "- **int64** is a 64-bit integer (whole number). The number of bits is just the amount of internal storage used for that number. *For integers it limits how big the number can be.*\n",
+    "- **float64** is a \"floating point\" number (number with decimal places). *For floats the number of bits limits the precision of the number.*\n",
+    "- **bool** is a booleal value, which is just True/False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -211,8 +256,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame index\n",
+    "\n",
+    "Notice the column of sequential integers off to the left-hand side of the DataFrame output. That is the DataFrame's **index**. \n",
+    "\n",
+    "- The index contains the names of the rows\n",
+    "- Because we didn't explicitly specify an index column, Pandas created one for us"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +278,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,8 +288,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame columns\n",
+    "\n",
+    "There is a separate index of column names"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +307,7 @@
        "Index(['letters', 'hundreds', 'tens', 'boolean'], dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,12 +320,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing (selecting/indexing) a column with `df[]` notation"
+    "## Accessing (selecting/indexing) a column with `df[]` notation\n",
+    "\n",
+    "The most common, and concise, way of selecting a column out of a DataFrame is just using square brackets with the column name inside -- similar to how you access a dictionary value using it's key."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +341,7 @@
        "Name: hundreds, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,12 +354,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Each column is a Series"
+    "### Each column is a Series\n",
+    "\n",
+    "Columns are not just a list of values, they are a **Series**.\n",
+    "\n",
+    "- Series have an index alongside the values which makes sure they stay in proper alignment with other series in a DataFrame\n",
+    "- Series is the base one-dimensional (1D) data structure in Pandas, while DataFrames tend to be 2D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,18 +373,27 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['hundreds'].__class__"
+    "type(df['hundreds'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List of column names\n",
+    "\n",
+    "You can select multiple columns by putting a *list of column names* inside the square brackets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +460,7 @@
        "4  50.0       500"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,12 +473,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Math is easier with a DataFrame"
+    "## Math is easier with a DataFrame\n",
+    "\n",
+    "### Math with Series\n",
+    "\n",
+    "Both Series and DataFrames have mathematical methods associated with them, like sum(), mean(), median(), max(), min()..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +491,7 @@
        "1500"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,8 +501,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many simple math operations that can be performed element-wise between Series and DataFrames, some of which can be specified with the common math operators (+, -, /, \\*).\n",
+    "\n",
+    "**Operations between Series align values based on their associated index values.**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +525,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,8 +535,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Math on a DataFrame\n",
+    "\n",
+    "Simple math methods will operate down columns, giving you a Series, indexed by the column names. *Notice what it did with the column of strings!*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +558,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,12 +571,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Boolean series as a selector"
+    "## Boolean series as a selector\n",
+    "\n",
+    "Logical tests on Series return a series of boolean (True/False) values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +592,7 @@
        "Name: tens, dtype: bool"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,8 +602,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**You can use a series of True/False values to return only the rows of a DataFrame where the Series equals True**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +673,7 @@
        "2       c       300  30.0     True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +747,7 @@
        "3       D       400  40.0     True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,12 +760,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Series are automatically aligned"
+    "## Series are automatically aligned by their index\n",
+    "\n",
+    "Here we create a Series from scratch, but its index is in descending numerical order"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +781,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,8 +793,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New DataFrame column gets aligned\n",
+    "\n",
+    "Now when we create a new column in our DataFrame, using that series, Pandas forces alignment based on the two indexes!\n",
+    "\n",
+    "*Any row in our series without a corresponding index in the original DataFrame will be dropped, and any rows of the DataFrame without a matching index value in the Series will end up with a NaN / Null value.*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +890,7 @@
        "4     eee       500  50.0    False        Five"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,12 +904,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index doesn't have to be integers"
+    "## Index doesn't have to be integers\n",
+    "\n",
+    "Since the Index isn't row numbers, but instead, the names of the rows, you can use things like strings or dates for the Index. Here we set an existing column for use as the Index."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +998,7 @@
        "Five            eee       500  50.0    False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,8 +1009,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And then every column's Series has this same Index"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +1032,7 @@
        "Name: letters, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,12 +1045,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `.loc[]` label-based two-axis indexing/selecting"
+    "## `.loc[]` label-based two-axis indexing/selecting\n",
+    "\n",
+    "A more general, and in some ways readable, way of selecting DataFrame elements (rows, columns, values) is by using `df.loc[]` to specify \\[row, column\\] labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +1061,7 @@
        "'A'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,8 +1071,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Colon `:` for wholes or slices\n",
+    "\n",
+    "A notation that comes from accessing lists in Python is the \"slice\" operator, which is specified with a colon between two values. **The colon by itself denotes the whole row or column.** So, here we grab a single column."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1096,7 @@
        "Name: hundreds, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,8 +1106,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lists for combinations\n",
+    "\n",
+    "Lists of values work the same as with the `df[]` notation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1189,7 @@
        "Five         50.0     eee"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,8 +1199,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single rows are a Series, too\n",
+    "\n",
+    "Remember, any 1D result, row or column, will be a Series in Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1222,7 @@
        "Name: Three, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,8 +1232,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Two or more rows are a DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1303,7 @@
        "Five            eee       500  50.0    False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,8 +1313,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean series can be used for grabbing True rows or columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1392,7 @@
        "Three             c       300  30.0     True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1483,7 @@
        "Five              500  50.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1597,7 @@
        "Five              500  50.0  550.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
