tweaks to wording for merger and melt

--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -134,9 +134,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minimally, you need to specify \n",
+    "### Minimally, for a `melt()` you need to specify \n",
     "\n",
-    "- a list of which columns don't get \"un-pivoted\" – these values will get repeated.\n",
+    "- a list of the columns which **don't** get \"un-pivoted\" – *these values will get repeated*.\n",
     "\n",
     "*Notice that the column headers by default end up in a column called \"variable\", and the table body values end up in a column called \"value\".*"
    ]
@@ -1019,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
