--- a/MergeDatasets.ipynb
+++ b/MergeDatasets.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Merging (joining) two data sets\n",
     "\n",
-    "Here we'll read in a second sheet out of the same Excel workbook we first used for names and state lists, and join this new state-level data with the people and states data we exploded from lists into rows.\n",
+    "It is very common to want to bring in some extra data from a second table and add it to our primary table.\n",
+    "\n",
+    "- Our primary table was prepared in tidy form and saved to a CSV file in the [SplitExplodeLists](SplitExplodeLists.ipynb) notebook. It has people and the states they've lived in.\n",
+    "- The second table we'll load from the second sheet in an Excel workbook. It contains populations of states.\n",
     "\n",
     "### This is the Pandas equivalent of an SQL JOIN command!"
    ]
@@ -15,9 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load tidy data as main table\n",
-    "\n",
-    "First we need to load our tidy data, which is the result of another exercise on splitting strings into lists and exploding them into rows. [SplitExlodeLists](SplitExplodeLists.ipynb)"
+    "## Load tidy data as main table\n"
    ]
   },
   {
@@ -31,11 +32,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Bobby</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Bobby</td>\n",
+       "      <td>Michigan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Sue</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Sue</td>\n",
+       "      <td>Nevada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Sue</td>\n",
+       "      <td>California</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Tamika</td>\n",
+       "      <td>Florida</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Tamika</td>\n",
+       "      <td>Washington</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Cale</td>\n",
+       "      <td>South Dakota</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>Iris</td>\n",
+       "      <td>Washington</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Iris</td>\n",
+       "      <td>Oregon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Iris</td>\n",
+       "      <td>California</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name         state\n",
+       "0    Bobby       Wyoming\n",
+       "1    Bobby      Michigan\n",
+       "2      Sue     Wisconsin\n",
+       "3      Sue        Nevada\n",
+       "4      Sue    California\n",
+       "5   Tamika       Florida\n",
+       "6   Tamika    Washington\n",
+       "7     Cale  South Dakota\n",
+       "8     Iris    Washington\n",
+       "9     Iris        Oregon\n",
+       "10    Iris    California"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ps_tidy_min = pd.read_csv('data/people_states_tidy.csv')"
+    "ps_tidy_min = pd.read_csv('data/people_states_tidy.csv')\n",
+    "ps_tidy_min"
    ]
   },
   {
@@ -44,12 +151,12 @@
    "source": [
     "## Load state level data to join to our main table\n",
     "\n",
-    "We'll start by loading in a table of the US states, their populations, and the number of congessional house seats they are represented by."
+    "*Note here how we specify the sheet name since the table we want isn't the first sheet in the Excel workbook.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +186,18 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>43</td>\n",
+       "      <td>Montana</td>\n",
+       "      <td>989417</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>44</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>897936</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <td>45</td>\n",
        "      <td>South Dakota</td>\n",
@@ -115,6 +234,8 @@
       ],
       "text/plain": [
        "           state  population_2010  house_seats\n",
+       "43       Montana           989417            1\n",
+       "44      Delaware           897936            1\n",
        "45  South Dakota           814191            1\n",
        "46  North Dakota           672591            1\n",
        "47        Alaska           710249            1\n",
@@ -122,14 +243,14 @@
        "49       Wyoming           563767            1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "state_pop = pd.read_excel('./data/PeopleStates.xlsx', sheet_name='Sheet2')\n",
-    "state_pop.tail(5)"
+    "state_pop.tail(7)"
    ]
   },
   {
@@ -286,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort by values again\n",
+    "## Sort by values\n",
     "\n",
     "Then, we'll sort the rows \"descending\" and \"in place\" by the populatin column."
    ]
@@ -492,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
